# bolt

./: CMakeLists.txt  conanfile.py
bolt/: CMakeLists.txt
bolt/benchmarks/basic/: CMakeLists.txt  ExprFlatNoNullsBenchmark.cpp
bolt/common/base/: BitUtil.h
bolt/common/base/tests/: BitUtilTest.cpp
bolt/common/memory/: CMakeLists.txt
bolt/common/memory/sparksql/tests/: MemoryTestUtils.h
bolt/core/: QueryConfig.h
bolt/dwio/dwrf/reader/: SelectiveStringDictionaryColumnReader.cpp  SelectiveStringDictionaryColumnReader.h
bolt/dwio/dwrf/test/: CMakeLists.txt  SelectiveStringDictionaryColumnReaderTest.cpp
bolt/dwio/parquet/encryption/: CMakeLists.txt
bolt/dwio/parquet/reader/: PageReader.cpp  PageReader.h
bolt/exec/: Driver.h  Expand.cpp  Expand.h  HashAggregation.cpp  HashAggregation.h  LocalPlanner.cpp  Spiller.cpp  StreamingAggregation.cpp  StreamingAggregation.h
bolt/exec/tests/: ExpandTest.cpp  SpillerTest.cpp  StreamingAggregationTest.cpp
bolt/exec/tests/utils/: CMakeLists.txt  MemoryHogOperator.cpp  MemoryHogOperator.h
bolt/expression/: CastExpr-tpl.cpp  Expr.cpp
bolt/expression/tests/: CastExprTest.cpp  ExprTest.cpp
bolt/functions/flinksql/: CMakeLists.txt  DateTimeDiff.h  DateTimeFunctions.h  HashCodeFunction.cpp  HashCodeFunction.h  ToTimestampFunction.h
bolt/functions/flinksql/registration/: Register.cpp
bolt/functions/flinksql/tests/: FlinkSqlDataTimeFunctionsTest.cpp  JsonFunctionsTest.cpp
bolt/functions/lib/: CMakeLists.txt  Sequence.cpp  Sequence.h  TimeDiffUtils.h
bolt/functions/prestosql/: DateTimeImpl.h
bolt/functions/sparksql/: CMakeLists.txt  DateTimeFunctions.h  FormatNumber.cpp  FormatNumber.h  SequenceFunction.cpp
bolt/functions/sparksql/registration/: RegisterArray.cpp  RegisterString.cpp
bolt/functions/sparksql/tests/: CMakeLists.txt  FormatNumberTest.cpp  SequenceTest.cpp  SparkSqlDateTimeFunctionsTest.cpp
bolt/serializers/: PrestoSerializer.cpp
bolt/serializers/tests/: PrestoSerializerTest.cpp
bolt/shuffle/sparksql/: BoltRowBasedSortShuffleWriter.cpp  BoltShuffleReader.cpp  BoltShuffleReader.h  BoltShuffleWriter.cpp  BoltShuffleWriterV2.cpp  Payload.h
bolt/shuffle/sparksql/tests/: BoltShuffleReaderTest.cpp  CMakeLists.txt  ShuffleMemoryTest.cpp
scripts/: README.md  launch-spark.sh
scripts/conan/recipes/paimon-cpp/all/patches/: paimon-cpp-conan-deps.patch
scripts/launch-spark/: connect.py  test-queries.sql
