# Copyright (c) ByteDance Ltd. and/or its affiliates.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_executable(bolt_shuffle_spark_celeborn_test CelebornClientTest.cpp)

add_test(bolt_shuffle_spark_celeborn_test bolt_shuffle_spark_celeborn_test)

target_link_libraries(
    bolt_shuffle_spark_celeborn_test
    PRIVATE
        bolt_shuffle_spark_impl
        bolt_testutils
        glog::glog
        GTest::gtest
        GTest::gtest_main
)

add_test(
    NAME bolt_shuffle_spark_celeborn_e2e_test
    COMMAND
        bolt_shuffle_spark_celeborn_test
        --gtest_filter=CelebornE2ESmokeTest.nativeClientPushAndReadBack
)
set_tests_properties(
    bolt_shuffle_spark_celeborn_e2e_test
    PROPERTIES
        LABELS "celeborn_e2e"
)

add_executable(
    bolt_shuffle_spark_matrix_test
    ShuffleTestBase.cpp
    ShuffleMatrixTest.cpp
)

target_link_libraries(
    bolt_shuffle_spark_matrix_test
    PRIVATE
        bolt_shuffle_spark_impl
        bolt_testutils
        bolt_vector_fuzzer
        GTest::gtest_main
        GTest::gmock
)

# Add test
add_test(
    NAME bolt_shuffle_spark_matrix_test
    COMMAND bolt_shuffle_spark_matrix_test
)

add_executable(
    bolt_shuffle_spark_large_partition_test
    ShuffleTestBase.cpp
    ShuffleLargePartitionTest.cpp
)

target_link_libraries(
    bolt_shuffle_spark_large_partition_test
    PRIVATE
        bolt_shuffle_spark_impl
        bolt_vector_fuzzer
        bolt_testutils
        GTest::gtest_main
        GTest::gmock
)

# Add test
add_test(
    NAME bolt_shuffle_spark_large_partition_test
    COMMAND bolt_shuffle_spark_large_partition_test
)

add_executable(
    bolt_shuffle_spark_memory_test
    ShuffleTestBase.cpp
    ShuffleMemoryTest.cpp
)

target_link_libraries(
    bolt_shuffle_spark_memory_test
    PRIVATE
        bolt_shuffle_spark_impl
        bolt_vector_fuzzer
        bolt_testutils
        GTest::gtest_main
        GTest::gmock
)

# Add test
add_test(
    NAME bolt_shuffle_spark_memory_test
    COMMAND bolt_shuffle_spark_memory_test
)

add_executable(
    bolt_shuffle_spark_misc_test
    ShuffleTestBase.cpp
    ShuffleMiscTest.cpp
)

target_link_libraries(
    bolt_shuffle_spark_misc_test
    PRIVATE
        bolt_shuffle_spark_impl
        bolt_vector_fuzzer
        bolt_testutils
        GTest::gtest_main
        GTest::gmock
)

# Add test
add_test(
    NAME bolt_shuffle_spark_misc_test
    COMMAND bolt_shuffle_spark_misc_test
)

add_executable(
    bolt_shuffle_codec_test
    CodecTest.cpp
)

target_link_libraries(
    bolt_shuffle_codec_test
    PRIVATE
        bolt_shuffle_spark_impl
        bolt_testutils
        GTest::gtest_main
        GTest::gmock
)

add_test(
    NAME bolt_shuffle_codec_test
    COMMAND bolt_shuffle_codec_test
)

add_executable(
    bolt_shuffle_adaptive_zstd_codec_test
    AdaptiveParallelZstdCodecTest.cpp
)

target_link_libraries(
    bolt_shuffle_adaptive_zstd_codec_test
    PRIVATE
        bolt_shuffle_spark_impl
        bolt_testutils
        GTest::gtest_main
        GTest::gmock
)

add_test(
    NAME bolt_shuffle_adaptive_zstd_codec_test
    COMMAND bolt_shuffle_adaptive_zstd_codec_test
)

add_executable(bolt_shuffle_reader_test BoltShuffleReaderTest.cpp)

target_link_libraries(
    bolt_shuffle_reader_test
    PRIVATE
        bolt_shuffle_spark_impl
        bolt_testutils
        GTest::gtest
        GTest::gmock
)

add_test(
    NAME bolt_shuffle_reader_test
    COMMAND bolt_shuffle_reader_test
)
